// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodolistListView loading error state 1`] = `
<section>
  Unable to load todos...
</section>
`;

exports[`TodolistListView loading state 1`] = `
<section>
  Loading...
</section>
`;

exports[`TodolistListView normal state 1`] = `
<section>
  <h1>todolist:welcome - Unit test</h1>
  <m-button>Nouvelle tâche</m-button>
  <m-table columns="[object Object],[object Object],[object Object],[object Object],[object Object]" rows="[object Object]"></m-table>
  <confirmation-stub title="Confirmation" text="Are you sure ?" confirmmsg="Ok" cancelmsg="Cancel"></confirmation-stub>
  <!---->
</section>
`;
